--- a/src/components/App.css
+++ b/src/components/App.css
@@ -47,5 +47,5 @@ body{
     text-shadow: -3px 2px 0px rgba(19, 19, 19, 0.459);
     text-align: center;
     margin: 10px 0 30px 0;
-    cursor: default;
+    cursor: pointer;
 }
