--- a/src/components/BigCard.css
+++ b/src/components/BigCard.css
@@ -14,13 +14,15 @@
 
 .img-column h1{
     display: inline-block;
-    margin-left: 15px;
+    margin-left: 10px;
     font-size: 24px;
+    text-transform: capitalize;
 }
 
 .img-column img{
     transform: scale(130%);
     margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 .img-column h2{
